--- a/src/main/resources/templates/recipe/ingredient/list.html
+++ b/src/main/resources/templates/recipe/ingredient/list.html
@@ -2,34 +2,33 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Recipe Home</title>
+    <title>Ingredient Home</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"
-          th:href="@{webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}">
+          th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}">
 
-    <script src="webjars/jquery/1.11.1/jquery.min.js"></script>
+    <script src="/webjars/jquery/1.11.1/jquery.min.js"></script>
+
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous" th:src="@{webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+            crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 </head>
 <body>
-
-<!--/*@thymesVar id = "recipes" type = "java.util.List"*/-->
-<!--/*@thymesVar id = "recipes" type = "guru.springframework.domain.Recipe"*/-->
+<!--/*@thymesVar id="recipe" type="guru.springframework.domain.Recipe"*/-->
+<!--/*@thymesVar id="ingredients" type="java.util.Set<guru.springframework.commands.IngredientCommand>"*/-->
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <div class="panel panel-primary">
-
+            <div class ="panel panel-primary">
                 <div class="panel-heading">
-                    <h1 class="panel-title">My Recipes!</h1>
+                    <h1 class="panel-title">Ingredients</h1>
                 </div>
                 <div class="panel-body">
-                    <div class="table-responsive" th:if="${not #lists.isEmpty(recipes)}">
-                        <table class="table table-hover ">
+                    <div class="table-responsive" th:if="${not #lists.isEmpty(recipe.ingredients)}">
+                        <table class="table table-hover">
                             <thead class="thead-inverse">
                             <tr>
                                 <th>ID</th>
@@ -39,12 +38,12 @@
                                 <th>Delete</th>
                             </tr>
                             </thead>
-                            <tr th:each="recipe:${recipes}">
-                                <td th:text="${recipe.id}">123</td>
-                                <td th:text="${recipe.description}">Tasty Goodnees 1</td>
-                                <td><a th:href="@{'/recipe/' + ${recipe.id} + '/show'}">View</a></td>
-                                <td><a th:href="@{'/recipe/' + ${recipe.id} + '/update'}">Update</a></td>
-                                <td><a th:href="@{'/recipe/' + ${recipe.id} + '/delete'}">Delete</a></td>
+                            <tr th:each="ingredient:${recipe.ingredients}">
+                                <td th:text="${ingredient.id}">id</td>
+                                <td th:text="${ingredient.description}">des</td>
+                                <td><a th:href="@{'/recipe/'+${recipe.id} + '/ingredient/'+ ${ingredient.id} + '/show'}">view</a></td>
+                                <td><a th:href="@{'/recipe/'+${recipe.id} + '/ingredient/'+ ${ingredient.id} + '/update'}">update</a></td>
+                                <td><a th:href="@{'/recipe/'+${recipe.id} + '/ingredient/'+ ${ingredient.id} + '/delete'}">delete</a></td>
                             </tr>
                         </table>
                     </div>
@@ -53,6 +52,5 @@
         </div>
     </div>
 </div>
-
 </body>
 </html>
